--- a/portfolio.html
+++ b/portfolio.html
@@ -2,74 +2,117 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>B. Likhitha | Portfolio</title>
   <style>
-    body {
+    * {
+      box-sizing: border-box;
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-      background: linear-gradient(135deg, #ff6fb5, #6a11cb, #2575fc);
-      background-size: 300% 300%;
-      animation: bgAnimation 8s infinite alternate;
+      padding: 0;
+    }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: radial-gradient(circle at top left, #ff9ff3, #00d2d3, #5f27cd);
+      background-size: 200% 200%;
+      animation: bgShift 10s ease-in-out infinite alternate;
       color: #fff;
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
       min-height: 100vh;
+      padding: 30px;
     }
 
-    @keyframes bgAnimation {
-      0% { background-position: left; }
-      100% { background-position: right; }
+    @keyframes bgShift {
+      0% { background-position: left top; }
+      100% { background-position: right bottom; }
     }
 
     .card {
-      background: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(10px);
-      border-radius: 15px;
-      width: 85%;
+      background: rgba(255, 255, 255, 0.12);
+      border-radius: 20px;
+      backdrop-filter: blur(12px);
+      box-shadow: 0 0 25px rgba(255, 255, 255, 0.2);
+      padding: 40px;
+      width: 90%;
       max-width: 900px;
-      padding: 30px;
-      margin-top: 40px;
-      box-shadow: 0 0 20px rgba(255,255,255,0.2);
-      animation: fadeIn 1.8s ease-in-out;
       text-align: center;
+      animation: fadeIn 1.5s ease-in-out;
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
     }
 
     h1 {
-      font-size: 2.5rem;
-      margin: 0;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
+      font-size: 2.8rem;
+      letter-spacing: 1px;
+      text-shadow: 0 0 10px rgba(0,0,0,0.3);
+    }
+
+    p.subtitle {
+      font-size: 1.2rem;
+      color: #f1f1f1;
+      margin-bottom: 30px;
+      font-weight: 300;
     }
 
     h2 {
-      margin-top: 30px;
-      font-size: 1.7rem;
-      border-left: 5px solid #fff;
-      padding-left: 10px;
+      font-size: 1.6rem;
+      color: #fff;
       text-align: left;
+      margin-top: 25px;
+      padding-left: 10px;
+      border-left: 4px solid #fff;
+      letter-spacing: 0.5px;
     }
 
     p, li {
-      font-size: 1.1rem;
+      font-size: 1rem;
       line-height: 1.6;
+      color: #e4e4e4;
       text-align: left;
     }
 
     ul {
-      margin-left: 20px;
-      text-align: left;
+      list-style-type: square;
+      margin-left: 25px;
+      margin-top: 10px;
+    }
+
+    li strong {
+      color: #ffeaa7;
+    }
+
+    a {
+      color: #74b9ff;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+
+    a:hover {
+      color: #00cec9;
+      text-shadow: 0 0 8px rgba(255,255,255,0.7);
     }
 
     footer {
-      margin: 30px 0;
+      margin-top: 40px;
+      font-size: 0.9rem;
       opacity: 0.8;
       text-align: center;
-      font-size: 0.9rem;
+    }
+
+    footer span {
+      color: #81ecec;
+    }
+
+    @media (max-width: 600px) {
+      h1 { font-size: 2.2rem; }
+      h2 { font-size: 1.4rem; }
+      .card { padding: 25px; }
     }
   </style>
 </head>
@@ -77,41 +120,38 @@
 
   <div class="card">
     <h1>B. Likhitha</h1>
-    <p style="font-size:1.2rem;">
-      AI & DS Student | Web Development & Data Science Enthusiast
-    </p>
+    <p class="subtitle">AI & DS Student | Web Development & Data Science Enthusiast</p>
 
     <h2>About Me</h2>
     <p>
-      I'm currently pursuing my B.Tech in Artificial Intelligence & Data Science 
-      at Mother Theresa Institute of Engineering and Technology with a CGPA of 8.7.
-      I'm passionate about web development and data science, and I love building 
-      creative and meaningful projects.
+      I’m pursuing my B.Tech in Artificial Intelligence & Data Science at Mother Theresa 
+      Institute of Engineering and Technology with a CGPA of 8.7. I’m passionate about 
+      building intelligent web applications, exploring machine learning, and solving 
+      real-world data problems creatively.
     </p>
 
     <h2>Skills</h2>
     <ul>
-      <li>Web Development (HTML, CSS, JavaScript)</li>
-      <li>Python & c</li>
+      <li>Web Development: HTML, CSS, JavaScript</li>
+      <li>Programming: Python, C</li>
+      <li>Data Analysis: Pandas, NumPy (Basic Level)</li>
     </ul>
 
     <h2>Projects</h2>
     <ul>
-      <li><strong>Portfolio Website</strong> – A personal website showcasing skills and academic details.</li>
-     
-      <li><strong>Web Page Designs</strong> – Responsive front-end pages using HTML & CSS.</li>
+      <li><strong>Portfolio Website</strong> – A responsive personal website showcasing skills and achievements.</li>
+      <li><strong>Web Page Designs</strong> – Custom UI pages with creative color palettes and modern layouts.</li>
     </ul>
 
     <h2>Contact</h2>
     <p>
-      Email: likhitha301@gmail.com<br>
-      
-      Location: Mother Theresa Institute of Engineering and Technology<br>
+      Email: <a href="mailto:likhitha301@gmail.com">likhitha301@gmail.com</a><br>
+      Location: Mother Theresa Institute of Engineering and Technology
     </p>
   </div>
 
   <footer>
-    © 2025 B. Likhitha | All Rights Reserved
+    © 2025 <span>B. Likhitha</span> | All Rights Reserved
   </footer>
 
 </body>
